# Kedit

./: .Makefile  .gitignore  BIBLIOGRAPHY.md  CMakeLists.txt  Makefile  NOTES  NOTES.md  README.md  References  TASKS  kedit  makefile
.cache/clangd/index/: Bucket.cpp.76521F4ED43D8B04.idx  Bucket.hpp.ADC73F44E7D8E502.idx  Core.hpp.B342773C53598975.idx  Macros.hpp.EDEF9922BFC10949.idx  Main.cpp.D204346AFDBCB0DC.idx  (+1 more)
Buf/: Buffer.cpp  Buffer.hpp
Documents/: Buffer
Source/: ANSI.h  Array.h  Bucket.h  Buffer.cpp  Buffer.hpp  C.hpp  Core.h  Core.hpp  Definitions.hpp  Editor.hpp  Error.cpp  Error.hpp  File.hpp  Global.hpp  IO.hpp  Include.h  Main.cpp  Notes  Pointer.h  Range.h  TextBuffer.cpp  Text_Buffer.cpp  Text_Buffer.h  Types.h  Types.hpp  Utilities.h  View.cpp  View.h  WaterWheel.cpp  WaterWheel.h  Water_Wheel.h
Source/.Legacy/: Text_Buffer.cpp  Text_Buffer.h
Source/Buffer/: Buffer.hpp  BufferCursor.cpp  BufferCursor.hpp  BufferSegment.cpp  BufferSegment.hpp
Source/Buffers/: .TextBuffer.h  Buffer.hpp  ChatBuffer.cpp  ChatBuffer.h  ChatBuffer.hpp  TextBuffer.cpp  TextBuffer.h  TextBuffer.hpp
Source/Core/: Macros.hpp  Types.hpp
Source/Types/: Dimension.hpp  Position.hpp  Primitive.hpp  Primitives.hpp  Spacial.hpp
Source/Utilities/: Buffer.cpp  Buffer.hpp  C.hpp  DoublyLink.cpp  DoublyLink.hpp  Error.hpp  File.hpp  Global.hpp  Stack.cpp  Stack.hpp  String.cpp  String.hpp  View.cpp  View.hpp
Tests/: Buffer.cpp  Test1  Test1.txt  Test2
source/: main.cpp  spacial_types.h
source/buffers/: text_buffer.cpp  text_buffer.h
tests/: Test3
